--- a/templet/fenyuan/css/index_fy.css
+++ b/templet/fenyuan/css/index_fy.css
@@ -229,6 +229,7 @@
 }
 #content .cyzs .tab_content .hui .hz img{
 	width:100%;
+	height: 100%;
 	-moz-border-radius: 15px;
 	-webkit-border-radius: 15px;
 	border-radius: 15px;
