--- a/templet/fenyuan/css/zy_fy.css
+++ b/templet/fenyuan/css/zy_fy.css
@@ -1040,3 +1040,61 @@
 
 
 
+
+
+#content .yjfc .yzxin{
+    padding:50px;
+}
+#content .yjfc .yzxin input{
+    outline:none;
+}
+#content .yjfc .yzxin ul li{
+    display:inherit;
+    margin:15px 0;
+    line-height:30px;
+    font-size:16px;
+    color:#444444;
+    font-family:"微软雅黑";
+}
+#content .yjfc .yzxin ul li span{
+    color:#ff0000;
+}
+#content .yjfc .yzxin ul li input{
+    width:208px;
+    height:28px;
+    line-height:28px;
+    border:1px solid #d0d0d0;
+}
+#content .yjfc .yzxin ul li.yzm{
+    width:265px;
+    _zoom:1;
+    overflow:hidden;
+}
+#content .yjfc .yzxin ul li .yzmt{
+    display:block;
+    float:right;
+    cursor:pointer;
+}
+#content .yjfc .yzxin ul li.yzm input{
+    width:80px;
+}
+#content .yjfc .yzxin ul li textarea{
+    border:1px solid #d0d0d0;
+    width:650px;
+    height:315px;
+    margin-right:36px;
+    float:right;
+    display:block;
+    outline:none;
+}
+#content .yjfc .yzxin p{
+    text-align:center;
+    padding-top:50px;
+}
+#content .yjfc .yzxin p input{
+    background:url(../images/tijiaoann.png) no-repeat;
+    width:200px;
+    height:50px;
+    border:none;
+    cursor:pointer;
+}
