--- a/templet/baoding/css/index.css
+++ b/templet/baoding/css/index.css
@@ -125,7 +125,7 @@
 #index_b_hero img { width:100%; height: 353px; }
 #index_b_hero .heros { width: 800px; height: 353px; }
 #index_b_hero .hero-wrap { overflow: visible; position: absolute; }
-#index_b_hero .next, #index_b_hero .prev {position: absolute; top: 159px;  z-index:99999; }
+#index_b_hero .next, #index_b_hero .prev {position: absolute; top: 159px;  z-index:99999; cursor: pointer; }
 #index_b_hero .next { right:-34px; }
 #index_b_hero .disabled { background-color: #eee; }
 #index_b_hero .mask-left, #index_b_hero .mask-right, #index_b_hero .hero { background: #fff;z-index: 1; position: absolute; top: 0; left: 0; width: 800px; height: 353px; overflow: hidden; left: 1920px; }
@@ -144,7 +144,7 @@
 	margin:30px 0;	
 }
 #content .con_dct3 .imagedesc{
-	margin:15px 0 30px 0;
+	margin:0 0 34px 0;
 	position:relative;
 }
 #content .con_dct3 .imagedesc .core_desc{
@@ -152,7 +152,7 @@
     left: 0;
     margin: 0 0 3px 3px;
     position: absolute;
-    width: 364px;
+    width: 369px;
 }
 #content .con_dct3 .imagedesc .core_desc .core_bg{
 	background: none repeat scroll 0 0 #fff;
@@ -185,7 +185,7 @@
 	color: #14b9d6;
 }
 #content .con_dct3 .w350 .core_desc .core_text{
-	width:310px;
+	width:330px;
 	margin: 0 auto;
 	padding:5px 15px;
 }
@@ -193,17 +193,17 @@
 	
 }
 #content .con_dct3 .w350 .core_desc{
-    width: 340px;
+    width: 360px;
 }
 #content .con_dct3 .w350{
-	width:346px;
-	height:475px;
-	margin-left:25px;
+	width:366px;
+	height:488px;
+	margin:0 0 0 15px;
 	overflow:hidden;
 }
 #content .con_dct3 .w350 a{
-	width:340px;
-	height:469px;
+	width:360px;
+	height:482px;
 	overflow:hidden;
 	display:block;
 	margin:auto;
@@ -216,12 +216,12 @@
 	width:100%;
 }
 #content .con_dct3 .w370{
-	width:370px;
-	margin:0 25px 0 19px;
+	width:375px;
+	margin: 0 0 0 34px;
 }
 #content .con_dct3 .w370 a{
-	width:364px;
-	height:218px;
+	width:369px;
+	height:221px;
 	overflow:hidden;
 	display:block;
 	margin:auto;
@@ -231,8 +231,8 @@
 	border:3px solid #14b9d6;
 }
 #content .con_dct3 .w370 .imagedesc{
-	width:370px;
-	height:224px;
+	width:375px;
+	height:227px;
 	overflow:hidden;
 }
 #content .con_dct3 .w370 .imagedesc img{
